src/test/deca/context/valid/print_multi_strings.deca
{
println("hello ","it's ","me");
}