src/test/deca/context/invalid/notprovided/equals_notvalid.deca
{
if ( 3=="hello"){
   println("this shouldn't be printed");
}
}